--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -129,3 +129,8 @@ edition = {1st}
   institution = {RFC Editor},
   url = {http://www.rfc-editor.org/rfc/rfc7231.txt}},
 }
+@ARTICLE{jiao2019,
+author={L. {Jiao} and F. {Zhang} and F. {Liu} and S. {Yang} and L. {Li} and Z. {Feng} and R. {Qu}}, 
+ journal={IEEE Access}, 
+  title={A Survey of Deep Learning-Based Object Detection}, 
+  year={2019},  volume={7},  number={},  pages={128837-128868},}
